Working on UI code coverage